fix user pic getting squished on assignment pages

--- a/style/extra.css
+++ b/style/extra.css
@@ -44,7 +44,8 @@
 }
 
 #user-pic .userpicture {
-	width: 80px;
+    width: 80px;
+    height: 80px;
 }
 
 #user-pic .defaultuserpic {
